// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Affix 1`] = `mocked`;

exports[`Mock render - default - value[0] - Affix 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{}",
      "id": "default",
      "offsetBottom": undefined,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.offsetBottom - value[0] - Affix 1`] = `mocked`;

exports[`Mock render - properties.offsetBottom - value[0] - Affix 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{}",
      "id": "properties.offsetBottom",
      "offsetBottom": 15,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.offsetTop - value[0] - Affix 1`] = `mocked`;

exports[`Mock render - properties.offsetTop - value[0] - Affix 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{}",
      "id": "properties.offsetTop",
      "offsetBottom": undefined,
      "offsetTop": 15,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - Affix 1`] = `mocked`;

exports[`Mock render - properties.style - value[0] - Affix 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"}}",
      "id": "properties.style",
      "offsetBottom": undefined,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;
